@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed escaping of :method option in remote_form_tag #1218 [Rick Olson]
+
 * Added Serbia and Montenegro to the country_select #1239 [todd@robotcoop.com]
 
 * Fixed Request#remote_ip in testing #1251 [bitsweat]
